# judo

./: .gitignore  .output.txt  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
demos/: basic_usage.tape  filtering.tape
examples/: verify_adapter.rs
src/: lib.rs  main.rs  theme.rs
src/app/: action.rs  command.rs  command_palette.rs  external.rs  input.rs  keymap.rs  loop.rs  loop_tests.rs  mod.rs  persistence.rs  recovery.rs  reducer.rs  state.rs  ui.rs
src/app/features/: filter.rs  mod.rs  navigation.rs  ui.rs
src/app/features/vcs/: actions.rs  handler.rs  mod.rs
src/app/state/: command_palette.rs  context_menu.rs  error.rs  extra.rs  header.rs  input.rs  log.rs  mod.rs  revset.rs  theme.rs
src/components/: diff_view.rs  footer.rs  header.rs  mod.rs  modals.rs  revision_graph.rs  welcome.rs
src/components/footer/: groups.rs  mod.rs  types.rs
src/components/modals/: command_palette.rs  context_menu.rs  error.rs  evolog.rs  help.rs  helpers.rs  manager.rs  mod.rs  operation_log.rs  text_input.rs  theme_selection.rs
src/domain/: graph_layout.rs  mod.rs  models.rs  vcs.rs
src/infrastructure/: defaults.rs  jj_adapter.rs  mod.rs
src/infrastructure/jj/: bookmarks.rs  diff.rs  log.rs  mod.rs  ops.rs  remote.rs  repo.rs
src/theme/: catppuccin.rs  glyphs.rs  gruvbox.rs  mod.rs  nord.rs  palette.rs
