[package]
name = "judo"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.28.1"
tokio = { version = "1.41.1", features = ["full"] }
tui-textarea = "0.7.0"
jj-lib = "0.38.0"
anyhow = "1.0.93"
futures = "0.3.31"
async-trait = "0.1.89"
similar = { version = "2.7.0", features = ["inline"] }
chrono = "0.4.38"
notify = "6.1.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
home = "0.5"

[dev-dependencies]
tempfile = "3.10"
mockall = "0.13.0"
rand = "0.8.5"
